crates/cuda-macros/tests/compile_fail/ptx_asm_input_output_constraint.stderr
error: `in` constraints must use input syntax such as `"r"`
  --> tests/compile_fail/ptx_asm_input_output_constraint.rs:14:16
   |
14 |             in("=r") x,
   |                ^^^^
